creusot/tests/should_fail/prusti/deny_zombies/call.stderr
error: T@'a cannot be moved to 'curr since it isn't copy
       otherwise it would become a zombie
  --> call.rs:11:11
   |
11 | #[ensures(fin(result) == *result)]
   |           ^^^^^^^^^^^
   |
note: the lint level is defined here
  --> call.rs:10:8
   |
10 | #[deny(creusot::prusti_zombie)]
   |        ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

thread 'main' panicked at 'called `Result::unwrap()` on an `Err` value: ErrorGuaranteed(())', cargo-creusot/src/bin/creusot-rustc.rs:136:55
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace

note: Creusot has panic-ed!
  |
  = note: Oops, that shouldn't have happened, sorry about that.
  = note: Please report this bug over here: https://github.com/xldenis/creusot/issues/new

